--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^4.13.9",
     "nodemon": "^1.14.9",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "quoted-printable": "^1.0.1"
   }
 }
